--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <header>
 
     </header>
-
+    <audio src="sounds/telesound.wav" id="telesound"></audio>
+    <audio src="sounds/next.wav" id="nextsound"></audio>
     <main>
         <div id="selectores">
             <img src="img/flexa.png" alt="" class="selector oculto" id="izquierda" onclick="canales(+1)">
